--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>More about me</p>
+        <p>About me</p>
       </div>
 
       <div class="row">
