Add meta contents

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Yiyang Xue - Personal Website</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="A personal website showcasing my projects and skills" name="description">
+  <meta content="portfolio, software development, projects" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
