--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>CS Undergraduate</h3>
+          <h3>Entry-Level Developer</h3>
           <div class="row">
             <div class="col-lg-6">
               <ul>
