--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
           <h3 class="resume-title">Volunteer Experience</h3>
           <div class="resume-item">
-            <h4>Software Development for The Heart Center </h4>
+            <h4>Software Development for THE HEART CENTER INC</h4>
             <h5>Transformative Meditation App for Incarcerated Individuals  (Mar 2024 — Present)</h5>
             <p>
             <ul>
