--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
             <p>
             <ul>
               <li>Deepening enthusiasm in social impact and contributions to society.</li>
-              <li>Engaging in regular project meetings to contribute and discuss progress updates as a member of the development team.</li>
+              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, utilizing Flutter and Agora to implement real-time communication features.</li>
               <li>Strengthening understanding of software architectures and development processes while collaborating with senior software developers and tech leads.</li>
-              <li>Utilizing Git & GitHub for version control and open-source development, in addition to tools like Slack and Notion for streamlined communications.</li>
+              <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
             </ul>
             </p>
           </div>
