Specified key skills in resume

--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
             <p>
             <ul>
               <li>Deepening enthusiasm in social impact and contributions to society.</li>
-              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, utilizing Flutter and Agora to implement real-time communication features.</li>
-              <li>Strengthening understanding of software architectures and development processes while collaborating with senior software developers and tech leads.</li>
+              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter and Agora to implement real-time communication features</span>.</li>
+              <li>Strengthening understanding of software architectures and development processes while <span style="text-decoration: underline;">collaborating with senior software developers and tech leads</span>.</li>
               <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
             </ul>
             </p>
