--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div class="portfolio-wrap">
             <h5>YY StockTrend</h5>
             <em>API integration, Node.js</em>
-            <a href="https://yystocktrend.cyclic.app/" target="_blank">
+            <a href="https://yy-stocktrend-cd753da5a11b.herokuapp.com/" target="_blank">
               <img src="assets/img/portfolio/yyStockTrend.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>YY StockTrend</h4>
@@ -309,7 +309,7 @@
           <div class="portfolio-wrap">
             <h5>Cocktail Connoisseur</h5>
             <em>API integration, Node.js</em>
-            <a href="https://cocktailconnoisseur.onrender.com" target="_blank">
+            <a href="https://cocktailconnoisseur-636ff1b7b8fc.herokuapp.com/" target="_blank">
               <img src="assets/img/portfolio/cocktailConnoisseur.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cocktail Connoisseur</h4>
