--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <p>
             <ul>
               <li>Deepening enthusiasm in social impact and contributions to society.</li>
-              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter and Agora to implement real-time communication features</span>.</li>
+              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter to implement real-time communication features</span>.</li>
               <li>Strengthening understanding of software architectures and development processes while <span style="text-decoration: underline;">collaborating with senior software developers and tech leads</span>.</li>
               <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
             </ul>
@@ -274,7 +274,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <h5>YY StockTrend</h5>
-            <em>API integration, Node.js</em>
+            <em>Node.js, API integration</em>
             <a href="https://yy-stocktrend-cd753da5a11b.herokuapp.com/" target="_blank">
               <img src="assets/img/portfolio/yyStockTrend.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -291,7 +291,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <h5>Movie Journal App</h5>
-            <em>PostgreSQL, Node.js</em>
+            <em>PostgreSQL, Node.js, API integration</em>
             <a href="https://github.com/selinaXyy/myFavoriteMovies" target="_blank">
               <img src="assets/img/portfolio/myFavoriteMovies.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -308,7 +308,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <h5>Cocktail Connoisseur</h5>
-            <em>API integration, Node.js</em>
+            <em>Node.js, API integration</em>
             <a href="https://cocktailconnoisseur-636ff1b7b8fc.herokuapp.com/" target="_blank">
               <img src="assets/img/portfolio/cocktailConnoisseur.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -325,7 +325,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <h5>Personal Journal App</h5>
-            <em>HTTP requests, data manipulation</em>
+            <em>Node.js, HTTP requests</em>
             <a href="https://github.com/selinaXyy/personalJournalWeb" target="_blank">
               <img src="assets/img/portfolio/personalJournal.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -359,7 +359,7 @@
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <h5>Tindog</h5>
-            <em>CSS grid & flexbox, Bootstrap</em>
+            <em>Bootstrap</em>
             <a href="https://selinaxyy.github.io/Tindog-Web/" target="_blank">
               <img src="assets/img/portfolio/tindog.png" class="img-fluid" alt="">
               <div class="portfolio-info">
