add new app in portfolio, change about me

--- a/index.html
+++ b/index.html
@@ -137,28 +137,22 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-4">
           <div class="icon-box">
             <i class="bi bi-people-fill" style="color: #e80368;"></i>
             <h3>Gender Equity</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-4">
           <div class="icon-box">
             <i class="bi bi-person-arms-up" style="color: #5578ff;"></i>
             <h3>Social Impact</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-4">
           <div class="icon-box">
             <i class="bi bi-lightning-fill" style="color: #56ff46;"></i>
             <h3>Sustainable Development</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4">
-          <div class="icon-box">
-            <i class="bi bi-person-fill" style="color: #ffa76e;"></i>
-            <h3>Human Rights</h3>
           </div>
         </div>
 
@@ -316,6 +310,23 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/cocktailConnoisseur.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 4"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <h5>Turtle Crossing Game</h5>
+            <em>Python</em>
+            <a href="https://replit.com/@yiyangxuexyy/turtlecrossinggame?v=1" target="_blank">
+              <img src="assets/img/portfolio/turtleCrossingGame.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Turtle Crossing Game</h4>
+                <p>App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/turtleCrossingGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
