--- a/index.html
+++ b/index.html
@@ -200,37 +200,73 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Project Experience</h3>
           <div class="resume-item">
-            <h4>YY StockTrend</h4>
-            <h5>Real-Time Monitoring with Tailored Analysis  (Mar 2024)</h5>
+            <h4>Pomodoro Pulse</h4>
+            <h5>Advanced Productivity App  (Apr-May 2024)</h5>
             <p>
             <ul>
-              <li>Provided <b>dynamic data updates</b> for current market trends.</li>
-              <li>Delivered comprehensive company insights and timely news articles via the <b>Alpha Vantage API</b> and <b>News API</b>.</li>
-              <li>Designed an intuitive user interface for effortless stock searches.</li>
+              <li>Implemented <b>PostgreSQL</b> for safety data manipulation, allowing users to access and visualize their productivity statistics and histories efficiently.</li>
+              <li>Integrated <b>OAuth</b> with <b>Flask-Login</b> to ensure secure user authentication and protect sensitive information.</li>
+              <li>Developed the Pomodoro timer with <b>JavaScript</b>, featuring dynamic background changes, sound cues for session transitions, and interactive particle effects using particles.js for a more engaging user experience.</li>
+              <li>Employed <b>SMTP</b> for automated email communications, enhancing customer support with timely notifications and responses.</li>
             </ul>
             </p>
           </div>
+
+          <div class="resume-item">
+            <h4>YY StockTrend</h4>
+            <h5>Real-Time Stock Monitoring & Analysis  (Mar 2024)</h5>
+            <p>
+            <ul>
+              <li>Provided <b>daily updates</b> on market trends and timely news articles using <b>Alpha Vantage API</b> and <b>News API</b>.</li>
+              <li>Delivered in-depth company insights and developed an intuitive interface for streamlined stock searches.</li>
+            </ul>
+            </p>
+          </div>
+
           <div class="resume-item">
             <h4>Movie Journaling App</h4>
-            <h5>API Integration and Database Management  (Nov 2023)</h5>
+            <h5>Efficient Media Data Management  (Nov 2023)</h5>
             <p>
             <ul>
               <li>Utilized <b>OMDb API</b> for automated retrieval of movie poster images and release years.</li>
               <li>Leveraged <b>PostgreSQL</b> database for efficient storage, updating, and deletion of user data.</li>
               <li>Implemented flexible organization with sort options to arrange entries by rating or recency.</li>
-              <li>Handled various HTTP requests effectively for seamless application interaction.</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Cocktail Recipe Generator</h4>
+            <h5>Interactive Recipe Discovery  (Oct 2023)</h5>
+            <p>
+            <ul>
+              <li>Developed search functionalities for discovering cocktails by name, ingredient, or through random generation.</li>
+              <li>Optimized user experience with vibrant visuals, precise instructions, and detailed ingredient info using <b>TheCocktailDB API</b>.</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Volunteer Experience</h3>
           <div class="resume-item">
+            <h4>Website Development for THE GAIA PROJECT</h4>
+            <h5>Empowering and Connecting Women Leaders Worldwide  (Jun 2024 — Present)</h5>
+            <p>
+            <ul>
+              <li>Serving as the <span style="text-decoration: underline;">sole web developer, collaborating closely with founders</span> to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
+              <li>Utilizing HTML, CSS, JavaScript, and Bootstrap to construct a responsive and engaging platform tailored to the strategic goals of the organization.</li>
+              <li>Engaging in regular strategy meetings with co-founders to ensure project alignment with organizational goals and effective translation of vision into a functional digital experience.</li>
+              <li>Enhancing professional skills in stakeholder communication, delivering tailored digital solutions that meet specific project requirements and expectations.</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
             <h4>Software Development for THE HEART CENTER INC</h4>
             <h5>Transformative Meditation App for Incarcerated Individuals  (Mar 2024 — Present)</h5>
             <p>
             <ul>
               <li>Deepening enthusiasm in social impact and contributions to society.</li>
-              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter to implement real-time communication features</span>.</li>
+              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter</span> to implement real-time communication features.</li>
               <li>Strengthening understanding of software architectures and development processes while <span style="text-decoration: underline;">collaborating with senior software developers and tech leads</span>.</li>
               <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
             </ul>
@@ -264,6 +300,23 @@
       </div>
 
       <div class="row portfolio-container">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
+          <div class="portfolio-wrap">
+            <h5>Pomodoro Pulse</h5>
+            <em>Flask, OAuth, PostgreSQL, SMTP</em>
+            <a href="https://yy-stocktrend-cd753da5a11b.herokuapp.com/" target="_blank">
+              <img src="assets/img/portfolio/pomodoroPulse.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Pomodoro Pulse</h4>
+                <p>Web/App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/pomodoroPulse.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 6"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
