add updates of myself

--- a/index.html
+++ b/index.html
@@ -300,12 +300,28 @@
       </div>
 
       <div class="row portfolio-container">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
+            <h5>TGP Official Website</h5>
+            <em>Fullstack</em>
+            <a href="https://www.tgpthegaiaproject.com/" target="_blank">
+              <img src="assets/img/portfolio/theGaiaProject.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>TGP Official Website</h4>
+                <p>Web/App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/theGaiaProject.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 6"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
           <div class="portfolio-wrap">
             <h5>Pomodoro Pulse</h5>
             <em>Flask, OAuth, PostgreSQL, SMTP</em>
-            <a href="https://yy-stocktrend-cd753da5a11b.herokuapp.com/" target="_blank">
+            <a href="https://www.pomodoro-pulse.com/" target="_blank">
               <img src="assets/img/portfolio/pomodoroPulse.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Pomodoro Pulse</h4>
@@ -335,7 +351,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-wrap">
             <h5>Movie Journal App</h5>
             <em>PostgreSQL, Node.js, API integration</em>
@@ -369,7 +385,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-wrap">
             <h5>Turtle Crossing Game</h5>
             <em>Python</em>
@@ -386,7 +402,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item">
           <div class="portfolio-wrap">
             <h5>Personal Journal App</h5>
             <em>Node.js, HTTP requests</em>
