--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <img src="assets/img/portfolio/theGaiaProject.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>TGP Official Website</h4>
-                <p>Web/App</p>
+                <p>Web</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/theGaiaProject.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 6"><i class="bx bx-plus"></i></a>
                 </div>
