add specified changes for portfolio section

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <h4>TGP Official Website</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/theGaiaProject.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 6"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/theGaiaProject.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
@@ -327,14 +327,14 @@
                 <h4>Pomodoro Pulse</h4>
                 <p>Web/App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/pomodoroPulse.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 6"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/pomodoroPulse.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web/App 3"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
           <div class="portfolio-wrap">
             <h5>YY StockTrend</h5>
             <em>Node.js, API integration</em>
@@ -342,9 +342,9 @@
               <img src="assets/img/portfolio/yyStockTrend.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>YY StockTrend</h4>
-                <p>Web</p>
+                <p>Web/App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/yyStockTrend.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 6"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/yyStockTrend.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web/App 2"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
@@ -359,16 +359,16 @@
               <img src="assets/img/portfolio/myFavoriteMovies.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Movie Journal App</h4>
-                <p>Web</p>
+                <p>Personal Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/myFavoriteMovies.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 5"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/myFavoriteMovies.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 3"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
           <div class="portfolio-wrap">
             <h5>Cocktail Connoisseur</h5>
             <em>Node.js, API integration</em>
@@ -376,9 +376,9 @@
               <img src="assets/img/portfolio/cocktailConnoisseur.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cocktail Connoisseur</h4>
-                <p>Web</p>
+                <p>Web/App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/cocktailConnoisseur.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 4"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/cocktailConnoisseur.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web/App 1"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
@@ -393,9 +393,9 @@
               <img src="assets/img/portfolio/turtleCrossingGame.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Turtle Crossing Game</h4>
-                <p>App</p>
+                <p>Personal Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/turtleCrossingGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/turtleCrossingGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 2"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
@@ -410,9 +410,9 @@
               <img src="assets/img/portfolio/personalJournal.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Personal Journal App</h4>
-                <p>Web</p>
+                <p>Personal Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/personalJournal.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/personalJournal.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 1"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </a>
