add Google Verification Tag

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="GVY64FUCzXlMmiOjnVh-yCvtNe5Hcx1Av19_6jopFj8" />
 </head>
 
 <body>
