--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <h3 class="resume-title">Project Experience</h3>
           <div class="resume-item">
             <h4>Pomodoro Pulse</h4>
-            <h5>Advanced Productivity App  (Apr-May 2024)</h5>
+            <h5>Advanced Productivity App  (Jul 2024)</h5>
             <p>
             <ul>
               <li>Implemented <b>PostgreSQL</b> for safety data manipulation, allowing users to access and visualize their productivity statistics and histories efficiently.</li>
