--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Node.js, Flask, PostgreSQL, Bootstrap</span>
+            <span class="skill">Next.js, Node.js, Flask, PostgreSQL, Bootstrap</span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -198,10 +198,48 @@
               <li>Expected Transfer Date: Fall 2025</li>
             </ul>
           </div>
+
+          <h3 class="resume-title">Work Experience</h3>
+          <div class="resume-item">
+            <h4>Website Development for THE GAIA PROJECT</h4>
+            <h5>Empowering and Connecting Women Leaders Worldwide  (Jun 2024 — Present)</h5>
+            <p>
+            <ul>
+              <li>Serving as the <span style="text-decoration: underline;">sole web developer, collaborating closely with founders</span> to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
+              <li>Utilizing HTML, CSS, JavaScript, and Bootstrap to construct a responsive and engaging platform tailored to the strategic goals of the organization.</li>
+              <li>Engaging in regular strategy meetings with co-founders to ensure project alignment with organizational goals and effective translation of vision into a functional digital experience.</li>
+              <li>Enhancing professional skills in stakeholder communication, delivering tailored digital solutions that meet specific project requirements and expectations.</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Software Development for THE HEART CENTER INC</h4>
+            <h5>Transformative Meditation App for Incarcerated Individuals  (Mar 2024 — Jul 2024)</h5>
+            <p>
+            <ul>
+              <li>Deepening enthusiasm in social impact and contributions to society.</li>
+              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter</span> to implement real-time communication features.</li>
+              <li>Strengthening understanding of software architectures and development processes while <span style="text-decoration: underline;">collaborating with senior software developers and tech leads</span>.</li>
+              <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
+            </ul>
+            </p>
+          </div>
         </div>
 
         <div class="col-lg-6">
           <h3 class="resume-title">Project Experience</h3>
+          <div class="resume-item">
+            <h4>FinAID</h4>
+            <h5>AI Finance Advisor  (Aug 2024)</h5>
+            <p>
+            <ul>
+              <li>Integrated the trained <b>AI-powered backend</b> with <b>Flask</b> and <b>Next.js</b>, facilitating seamless communication between the AI model and the user interface for real-time financial analysis.</li>
+              <li>Collaborated with UI/UX designers to implement dynamic user interfaces using Next.js, enhancing user interaction and experience.</li>
+            </ul>
+            </p>
+          </div>
+
           <div class="resume-item">
             <h4>Pomodoro Pulse</h4>
             <h5>Advanced Productivity App  (Jul 2024)</h5>
@@ -249,34 +287,7 @@
             </p>
           </div>
 
-          <h3 class="resume-title">Volunteer Experience</h3>
-          <div class="resume-item">
-            <h4>Website Development for THE GAIA PROJECT</h4>
-            <h5>Empowering and Connecting Women Leaders Worldwide  (Jun 2024 — Present)</h5>
-            <p>
-            <ul>
-              <li>Serving as the <span style="text-decoration: underline;">sole web developer, collaborating closely with founders</span> to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
-              <li>Utilizing HTML, CSS, JavaScript, and Bootstrap to construct a responsive and engaging platform tailored to the strategic goals of the organization.</li>
-              <li>Engaging in regular strategy meetings with co-founders to ensure project alignment with organizational goals and effective translation of vision into a functional digital experience.</li>
-              <li>Enhancing professional skills in stakeholder communication, delivering tailored digital solutions that meet specific project requirements and expectations.</li>
-            </ul>
-            </p>
-          </div>
-
-          <div class="resume-item">
-            <h4>Software Development for THE HEART CENTER INC</h4>
-            <h5>Transformative Meditation App for Incarcerated Individuals  (Mar 2024 — Present)</h5>
-            <p>
-            <ul>
-              <li>Deepening enthusiasm in social impact and contributions to society.</li>
-              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter</span> to implement real-time communication features.</li>
-              <li>Strengthening understanding of software architectures and development processes while <span style="text-decoration: underline;">collaborating with senior software developers and tech leads</span>.</li>
-              <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
-            </ul>
-            </p>
-          </div>
         </div>
-
       </div>
 
     </div>
@@ -303,6 +314,23 @@
       </div>
 
       <div class="row portfolio-container">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-app">
+          <div class="portfolio-wrap">
+            <h5>FinAID</h5>
+            <em>Flask, Next.js</em>
+            <a href="https://finaid-sepia.vercel.app/" target="_blank">
+              <img src="assets/img/portfolio/finaid.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>AI Finance Advisor</h4>
+                <p>Web/App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/finaid.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web/App 4"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <h5>TGP Official Website</h5>
