--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <p>
             <ul>
               <li>Deepening enthusiasm in social impact and contributions to society.</li>
-              <li>Actively participating in regular project meetings to discuss progress updates as a member of the development team, <span style="text-decoration: underline;">utilizing Flutter</span> to implement real-time communication features.</li>
+              <li>Actively participated in regular project meetings to provide progress updates, collaborating with the development team to implement various features using <span style="text-decoration: underline;">Flutter</span>.</li>
               <li>Strengthening understanding of software architectures and development processes while <span style="text-decoration: underline;">collaborating with senior software developers and tech leads</span>.</li>
               <li>Utilizing Git & GitHub for version control and open-source development, alongside coordination tools such as Slack and Notion to optimize project workflow.</li>
             </ul>
