--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <p>
             <ul>
               <li>Serving as the <span style="text-decoration: underline;">sole web developer, collaborating closely with founders</span> to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
-              <li>Utilizing HTML, CSS, JavaScript, and Bootstrap to construct a responsive and engaging platform tailored to the strategic goals of the organization.</li>
+              <li>Utilizing HTML, CSS, JavaScript, Bootstrap, and Node.js to construct a responsive and engaging platform tailored to the strategic goals of the organization.</li>
               <li>Engaging in regular strategy meetings with co-founders to ensure project alignment with organizational goals and effective translation of vision into a functional digital experience.</li>
               <li>Enhancing professional skills in stakeholder communication, delivering tailored digital solutions that meet specific project requirements and expectations.</li>
             </ul>
