update work experience

--- a/index.html
+++ b/index.html
@@ -201,8 +201,20 @@
 
           <h3 class="resume-title">Work Experience</h3>
           <div class="resume-item">
-            <h4>Website Development for THE GAIA PROJECT</h4>
-            <h5>Empowering and Connecting Women Leaders Worldwide  (Jun 2024 — Present)</h5>
+            <h4>Software Engineering Intern</h4>
+            <h5>Eurek AI - Shanghai, China (Remote) | Dec 2024 — Feb 2025</h5>
+            <p>
+            <ul>
+              <li>Contributed to <span style="text-decoration: underline;">full-stack system design</span>, supporting scalable feature development across multiple layers.</li>
+              <li>Performed code audits to identify logic flaws, resolve high-impact runtime bugs, and drive targeted optimizations across core modules.</li>
+              <li>Integrated and validated RESTful APIs, ensuring reliable service interoperability and efficient data exchange.</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Product & Web Developer</h4>
+            <h5>The Gaia Project - Nonprofit Initiative (Remote) | Jun 2024 — Present</h5>
             <p>
             <ul>
               <li>Serving as the <span style="text-decoration: underline;">sole web developer, collaborating closely with founders</span> to deliver a website that promotes gender equity and supports female entrepreneurs globally by providing resources, creating collaborative spaces, and amplifying female presence in business.</li>
@@ -214,8 +226,8 @@
           </div>
 
           <div class="resume-item">
-            <h4>Software Development for THE HEART CENTER INC</h4>
-            <h5>Transformative Meditation App for Incarcerated Individuals  (Mar 2024 — Jul 2024)</h5>
+            <h4>Software Engineering Volunteer</h4>
+            <h5>The Heart Center Inc  - Nonprofit Initiative (Remote) | Mar 2024 — Jul 2024</h5>
             <p>
             <ul>
               <li>Deepening enthusiasm in social impact and contributions to society.</li>
@@ -229,6 +241,17 @@
 
         <div class="col-lg-6">
           <h3 class="resume-title">Project Experience</h3>
+          <div class="resume-item">
+            <h4>FinAID</h4>
+            <h5>AI Finance Advisor  (Aug 2024)</h5>
+            <p>
+            <ul>
+              <li>Integrated the trained <b>AI-powered backend</b> with <b>Flask</b> and <b>Next.js</b>, facilitating seamless communication between the AI model and the user interface for real-time financial analysis.</li>
+              <li>Collaborated with UI/UX designers to implement dynamic user interfaces using Next.js, enhancing user interaction and experience.</li>
+            </ul>
+            </p>
+          </div>
+          
           <div class="resume-item">
             <h4>FinAID</h4>
             <h5>AI Finance Advisor  (Aug 2024)</h5>
@@ -272,17 +295,6 @@
               <li>Utilized <b>OMDb API</b> for automated retrieval of movie poster images and release years.</li>
               <li>Leveraged <b>PostgreSQL</b> database for efficient storage, updating, and deletion of user data.</li>
               <li>Implemented flexible organization with sort options to arrange entries by rating or recency.</li>
-            </ul>
-            </p>
-          </div>
-
-          <div class="resume-item">
-            <h4>Cocktail Recipe Generator</h4>
-            <h5>Interactive Recipe Discovery  (Oct 2023)</h5>
-            <p>
-            <ul>
-              <li>Developed search functionalities for discovering cocktails by name, ingredient, or through random generation.</li>
-              <li>Optimized user experience with vibrant visuals, precise instructions, and detailed ingredient info using <b>TheCocktailDB API</b>.</li>
             </ul>
             </p>
           </div>
