--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <div class="portfolio-wrap">
             <h5>FinAID</h5>
             <em>Flask, Next.js</em>
-            <a href="https://finaid-sepia.vercel.app/" target="_blank">
+            <a>
               <img src="assets/img/portfolio/finaid.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>AI Finance Advisor</h4>
@@ -351,7 +351,7 @@
               <img src="assets/img/portfolio/theGaiaProject.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>TGP Official Website</h4>
-                <p>Web</p>
+                <p>Web<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/theGaiaProject.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 </div>
@@ -368,7 +368,7 @@
               <img src="assets/img/portfolio/pomodoroPulse.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Pomodoro Pulse</h4>
-                <p>Web/App</p>
+                <p>Web/App<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/pomodoroPulse.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web/App 3"><i class="bx bx-plus"></i></a>
                 </div>
@@ -381,7 +381,7 @@
           <div class="portfolio-wrap">
             <h5>YY StockTrend</h5>
             <em>Node.js, API integration</em>
-            <a href="https://yy-stocktrend-cd753da5a11b.herokuapp.com/" target="_blank">
+            <a>
               <img src="assets/img/portfolio/yyStockTrend.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>YY StockTrend</h4>
@@ -402,7 +402,7 @@
               <img src="assets/img/portfolio/myFavoriteMovies.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Movie Journal App</h4>
-                <p>Personal Project</p>
+                <p>Personal Project<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/myFavoriteMovies.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 3"><i class="bx bx-plus"></i></a>
                 </div>
@@ -415,11 +415,11 @@
           <div class="portfolio-wrap">
             <h5>Cocktail Connoisseur</h5>
             <em>Node.js, API integration</em>
-            <a href="https://cocktailconnoisseur-636ff1b7b8fc.herokuapp.com/" target="_blank">
+            <a href="https://github.com/selinaXyy/cocktailConnoisseur" target="_blank">
               <img src="assets/img/portfolio/cocktailConnoisseur.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Cocktail Connoisseur</h4>
-                <p>Web/App</p>
+                <p>Web/App<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/cocktailConnoisseur.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web/App 1"><i class="bx bx-plus"></i></a>
                 </div>
@@ -436,7 +436,7 @@
               <img src="assets/img/portfolio/turtleCrossingGame.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Turtle Crossing Game</h4>
-                <p>Personal Project</p>
+                <p>Personal Project<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/turtleCrossingGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 2"><i class="bx bx-plus"></i></a>
                 </div>
@@ -453,7 +453,7 @@
               <img src="assets/img/portfolio/personalJournal.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Personal Journal App</h4>
-                <p>Personal Project</p>
+                <p>Personal Project<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/personalJournal.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project 1"><i class="bx bx-plus"></i></a>
                 </div>
@@ -470,7 +470,7 @@
               <img src="assets/img/portfolio/simonGame.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Simon's Sequence</h4>
-                <p>Web</p>
+                <p>Web<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/simonGame.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 </div>
@@ -487,7 +487,7 @@
               <img src="assets/img/portfolio/tindog.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Tindog</h4>
-                <p>Web</p>
+                <p>Web<i class="bi bi-link-45deg"></i></p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/tindog.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
                 </div>
